# mlir-calc-dialect

./: .gitignore  CMakeLists.txt
calc-opt/: CMakeLists.txt  calc-opt.cpp
include/calc/: CMakeLists.txt  calcDialect.h  calcDialect.td  calcOps.h  calcOps.td  calcPasses.h  calcPasses.td
lib/calc/: CMakeLists.txt  calcDialect.cpp  calcOps.cpp  calcToArith.cpp
test/: CalcToArith_test.mlir  affine.mlir  arith.mlir  tensor.mlir  test.mlir
